re PR c++/56343 ([C++11] Destructor defaulted on first declaration has wrong implicit exception specification)

PR c++/56343
	* class.c (check_bases_and_members): Deduce noexcept after
	checking bases.

From-SVN: r196082